# xhtml-pdf

./: LICENSE  README.md  plan.md  pyproject.toml  sample_0.txt  sample_xhtml.txt
assets/xhtml/: report_sample_0.xhtml copy.json  report_sample_0.xhtml.json  report_sample_1.xhtml.json  report_sample_3.xhtml.json  report_sample_4.xhtml.json  report_sample_5.xhtml.json  report_sample_6.html.json  report_sample_7.xhtml.json  sample_1_no_base64.xhtml  sample_7.xhtml
assets/xhtml/extracted_pages/sample_0/: page_001.xhtml  page_002.xhtml  page_003.xhtml  page_004.xhtml  page_006.xhtml  page_007.xhtml  page_008.xhtml  page_011.xhtml  page_012.xhtml  page_014.xhtml  page_015.xhtml  page_016.xhtml  page_019.xhtml  page_022.xhtml  page_023.xhtml  page_026.xhtml  page_027.xhtml  page_028.xhtml  page_034.xhtml  page_036.xhtml  page_038.xhtml  page_039.xhtml  page_040.xhtml  page_041.xhtml  page_043.xhtml  page_044.xhtml  page_045.xhtml  page_046.xhtml  page_048.xhtml  page_049.xhtml  page_051.xhtml  page_052.xhtml  page_053.xhtml  page_054.xhtml  page_057.xhtml  page_058.xhtml  page_065.xhtml  page_066.xhtml  page_067.xhtml  page_072.xhtml  (+145 more)
assets/xhtml/v3/: report_sample_2.xhtml.json  report_sample_4.xhtml.json
src/: remove_base64.py
src/xhtml_pdf_exporter/: __init__.py  background_image.py  extract_pages.py  extract_pages_v2.py  logging_config.py  page_screenshot copy.py  page_screenshot.py  page_splitter.py  pdf_exporter.py  prince-styles.css  remove_base64.py  weasyprint_exporter.py  xhtml_analyzer.py  xhtml_pdf_exporter_v2.py
(+305 files in other folders)
