[project]
name = "xhtml-pdf-exporter"
version = "0.1.0"
description = "Export XHTML to PDF with dynamic page orientation"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "pypdf2>=3.0.0",
    "openai>=1.0.0",
    "tenacity>=8.0.0",
    "lxml>=5.3.0",
    "playwright>=1.49.1",
    "pillow>=11.1.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
